# monika11

./: .env.example  CONSOLIDATED_README.md  README.md  TEAMMATE_GUIDE.md  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  metadata.json  package-lock.json  package.json  pyproject.toml  security_spec.md  server.ts  tsconfig.json
marihacks/: README.md  __init__.py  constellation.html  demo_events.jsonl  event_tracer.py  events.py  requirements.txt  server.py  smoke_test.py  vault.py
marihacks/demo_vault/: 00 Welcome.md  Recursion.md  Study log 2026-04-18.md
marihacks/plugin/: esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
marihacks/plugin/src/: bus.ts  chat-view.ts  constellation-view.ts  main.ts  settings.ts
marihacks/plugin/src/constellation/: render.ts  scene.ts
monika/: __init__.py  agent_builder.py  agentic_age.py  main.py
monika/agents/: emotion.py  persona.py  reasoning.py
monika/core/: context.py  pipeline.py  privacy.py  swarm.py  tracing.py
monika/memory/: __init__.py  store.py
src/: App.tsx  index.css  registry.ts  translations.ts
